BUG#31114 - falcon : creating tablespace with same name twice returns             Unknown error -103

When creating a tablespace that already exists, falcon returns
non-informative error message.