storage/falcon/ha_falcon.cpp
@@ -1796,6 +1796,8 @@ int StorageInterface::alter_tablespace(handlerton* hton, THD* thd, st_alter_tabl
 		{
 		case CREATE_TABLESPACE:
 			ret = storageHandler->createTablespace(ts_info->tablespace_name, ts_info->data_file_name);
+			if (ret == StorageErrorTableSpaceExist)
+				ret= HA_ERR_TABLESPACE_EXIST;
 			break;
 
 		case DROP_TABLESPACE:
